testsuite/tests/rename/should_fail/T12686b.stderr

T12686b.hs:5:19: error: [GHC-45510]
    • Term variable ‘a’ cannot be used here
        (term variables cannot be promoted)
    • In the second argument of ‘Either’, namely ‘'a’
      In the type ‘Either Int 'a’
      In the definition of data constructor ‘MkBad’
